temp fix to secondary pages being covered

--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ p {
     font-weight: 500;
 }
 
+h1{
+    text-align: center
+}
+
 a:hover {
     color: var(--purple);
     text-decoration: none;
@@ -237,6 +241,7 @@ a:hover {
 }
 
 .bio-info h1 {
+    text-align: left;
     font-size: 6rem;
     font-weight: bold;
     color: var(--purple);
